turnkey-nextcloud-17.0 (1) turnkey; urgency=low

  * Updated Nextcloud to latest upstream version - 23.0.1.

  * Include fail2ban config (security).
    [ The Right Honourable Reverend <https://github.com/trhr> ]

  * Note: Please refer to turnkey-core's 17.0 changelog for changes common to
    all appliances. Here we only describe changes specific to this appliance.

 -- Zhenya Hvorostian <zhenya@turnkeylinux.org>  Thu, 10 Feb 2022 10:34:02 +0300

turnkey-nextcloud-16.1 (1) turnkey; urgency=low

  * Updated Nextcloud to latest upstream version - 21.0.1.

  * Fix cron job path - closes #1569.

  * Include 'turnkey-occ' wrapper script (for occ command). Runs 'php occ' as
    www-data user.

  * Move Nextcloud data folder outside webroot - /var/www/nextcloud-data -
    closes #1436.

  * Set default permissions more permissively, so that the webUI updater will
    work OOTB - closes #1182.

  * Remove redundant 3rd party sury.org repo - part of #1578.

  * Note: Please refer to turnkey-core's 16.1 changelog for changes common to
    all appliances. Here we only describe changes specific to this appliance.

 -- Jeremy Davis <jeremy@turnkeylinux.org>  Wed, 14 Apr 2021 15:29:51 +1000

turnkey-nextcloud-16.0 (1) turnkey; urgency=low

  * Updated Nextcloud to latest upstream version - 18.0.4.

  * Explcitly disable TLS<1.2 (i.e. SSLv3, TLSv1, TLSv1.1). (v15.x
    TurnKey releases supported TLS 1.2, but could fallback as low as TLSv1).

  * Update SSL/TLS cyphers to provide "Intermediate" browser/client support
    (suitable for "General-purpose servers with a variety of clients,
    recommended for almost all systems"). As provided by Mozilla via
    https://ssl-config.mozilla.org/.

  * Updated all relevant Debian packages to Buster/10 versions; including
    PHP 7.3.

  * Updated version of mysqltuner script - now installed as per upstream
    recommendation.

  * Note: Please refer to turnkey-core's changelog for changes common to all