@@ -1,6 +1,13 @@
 turnkey-nextcloud-17.0 (1) turnkey; urgency=low
 
-  * Updated Nextcloud to latest upstream version - 23.0.1.
+  * Changing nextcloud.py file to use subprocess.run instead of call for 
+    password and to check for return code.
+
+  * Added php-bcmath package to plan/main file.
+    Closes tracker #1767.
+
+  * Updated Nextcloud to latest upstream version - 23.0.1. 
+    [Zhenya Hvorostian <zhenya@turnkeylinux.org>]
 
   * Include fail2ban config (security).
     [ The Right Honourable Reverend <https://github.com/trhr> ]
@@ -8,7 +15,7 @@ turnkey-nextcloud-17.0 (1) turnkey; urgency=low
   * Note: Please refer to turnkey-core's 17.0 changelog for changes common to
     all appliances. Here we only describe changes specific to this appliance.
 
- -- Zhenya Hvorostian <zhenya@turnkeylinux.org>  Thu, 10 Feb 2022 10:34:02 +0300
+ -- Mattie Darden <mattie@turnkeylinux.org>  Wed, 26 Oct 2022 13:21:28 -0400
 
 turnkey-nextcloud-16.1 (1) turnkey; urgency=low
 
